# hacx

./: README.md  package-lock.json
client/: .prettierignore  eslint.config.mjs  next.config.ts  package-lock.json  package.json  types.ts
client/app/: globals.css  layout.tsx  page.tsx
client/app/api/: sendToArduino.js
client/app/api/chat/: route.ts
client/app/api/sendToArduino/: route.js
client/app/incident/: layout.tsx  page.tsx
client/app/incident/success/: page.tsx
client/app/voice/: page.tsx
client/components/: ReportFormUI.tsx  banner.tsx  button-card.tsx  header-text.tsx  log-in-with-singpass-button.tsx  navbar.tsx  page-container.tsx  report-form-ui.tsx  voice-assistant-button.tsx  voice-assistant.tsx
client/components/form/: form-input.tsx  form-navigation.tsx  form-section.tsx  report-form.tsx
client/components/ui/: HeaderText.tsx  PageContainer.tsx  ReportFormUI.tsx  SpeakIndicator.tsx  input.tsx
client/components/voice-assistant/: gradient-fade.tsx  voice-assistant-button.tsx  voice-assistant-ui.tsx  voice-assistant.tsx  voice-form-assistant.tsx
client/contexts/: form-context.tsx
client/form-config/: incident-form.tsx
client/hooks/: use-voice-assistant.ts
client/lib/: audio-processor.ts  prompts.ts  voicelive-client.ts
client/model/: AIReportForm.tsx  ReportForm.ts
client/model/api/chat/: route.ts
client/public/: login-with-singpass-button.min.js
client/types/: form.tsx
server/: app.py  arduino.py  pyproject.toml
