[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.2",
    "azure-ai-voicelive>=1.1.0",
    "azure-identity>=1.25.1",
    "flask>=3.1.2",
    "flask-cors>=6.0.1",
    "pyaudio>=0.2.14",
    "python-dotenv>=1.2.1",
]
